# wxIconSaver

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  __pkginfo__.py  formate.toml  git_helper.yml  lint_roller.sh  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini  version.py  wxIconSaver.py  wxIconSaver.wxg
.ci/: copy_pypi_2_github.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Building.rst  Source.rst  api.rst  conf.py  contributing.rst  docs.rst  index.rst  license.rst  requirements.txt  usage.rst
doc-source/_templates/sidebar/: navigation.html
wxIconSaver/: __init__.py  __main__.py
