[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "wxIconSaver"
version = "0.1.7"
description = "wxPython GUI for saving icons to files."
readme = "README.rst"
keywords = [ "gui", "icons", "utility", "wxpython",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/wxIconSaver"
"Issue Tracker" = "https://github.com/domdfcoding/wxIconSaver/issues"
"Source Code" = "https://github.com/domdfcoding/wxIconSaver"
Documentation = "https://wxiconsaver.readthedocs.io/en/latest"

[project.scripts]
wxIconSaver = "wxIconSaver:main"
wxiconsaver = "wxIconSaver:main"

[tool.mkrecipe]
conda-channels = [ "domdfcoding",]
extras = "all"
license-key = "GPL-3.0-or-later"

[tool.importcheck]

[tool.sphinx-pyproject]
github_username = "domdfcoding"
github_repository = "wxIconSaver"
author = "Dominic Davis-Foster"
project = "wxIconSaver"
copyright = "2019-2021 Dominic Davis-Foster"
language = "en"
package_root = "wxIconSaver"
extensions = [
    "sphinx_toolbox",
    "sphinx_toolbox.more_autodoc",
    "sphinx_toolbox.more_autosummary",
    "sphinx_toolbox.documentation_summary",
    "sphinx_toolbox.tweaks.param_dash",
    "sphinx_toolbox.tweaks.latex_toc",
    "sphinx.ext.intersphinx",
    "sphinx.ext.mathjax",
    "sphinxcontrib.httpdomain",
    "sphinxcontrib.extras_require",
    "sphinx.ext.todo",
    "sphinxemoji.sphinxemoji",
    "notfound.extension",
    "sphinx_copybutton",
    "sphinxcontrib.default_values",
    "sphinxcontrib.toctree_plus",
    "sphinx_debuginfo",
    "seed_intersphinx_mapping",
    "enum_tools.autoenum",
]
sphinxemoji_style = "twemoji"
gitstamp_fmt = "%d %b %Y"
templates_path = [ "_templates",]
html_static_path = [ "_static",]
source_suffix = ".rst"
master_doc = "index"
suppress_warnings = [ "image.nonlocal_uri",]
pygments_style = "default"
html_theme = "furo"
html_theme_path = [ "../..",]
html_show_sourcelink = true
toctree_plus_types = [
    "class",
    "confval",
    "data",
    "directive",
    "enum",
    "exception",
    "flag",
    "function",
    "method",
    "namedtuple",
    "protocol",
    "role",
    "typeddict",
]
add_module_names = false
hide_none_rtype = true
all_typevars = true
overloads_location = "bottom"
autodoc_exclude_members = [
    "__dict__",
    "__class__",
    "__dir__",
    "__weakref__",
    "__module__",
    "__annotations__",
    "__orig_bases__",
    "__parameters__",
    "__subclasshook__",
    "__init_subclass__",
    "__attrs_attrs__",
    "__init__",
    "__new__",
    "__getnewargs__",
    "__abstractmethods__",
    "__hash__",
]
